# ils4gas

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt
backend/: cli.py  main.py
backend/agents/: plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
backend/api/: deps.py
backend/api/routes/: chat.py  llm.py  mcp.py  memory.py  session.py  skill.py  ws.py
backend/core/: agent.py  config.py  context.py  env.py  events.py  exceptions.py  llm.py  message.py  port.py  token_counter.py
backend/mcp_server/: __init__.py  server.py
backend/mcp_server/modules/: enums.py  materials.py  sqlite_query.py  structure.py
backend/mcp_server/util/: comm.py
backend/services/: llm_service.py  mcp_service.py  session_service.py  title_service.py
backend/skills/: __init__.py  creator.py  executor.py  loader.py  registry.py  validator.py
backend/tools/: base.py  loader.py  mcp_adapter.py  mcp_manager.py  registry.py
backend/tools/builtin/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  skill.py  webfetch.py  websearch.py  write.py
backend/tui/: app.py  cli.py  screen.py
backend/tui/widgets/: history.py  status_bar.py
docs/: BUG_REFERENCE.md  DESIGN.md  MCP_TOOLS.md  PROGRESS.md  STRUCTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/ChatPanel/: index.tsx
frontend/src/components/ModelSelector/: index.tsx
frontend/src/components/SessionList/: index.tsx
frontend/src/components/common/: LocaleToggle.tsx
frontend/src/hooks/: useLocale.tsx
frontend/src/locales/: en-US.json  index.ts  zh-CN.json
frontend/src/store/: index.ts
frontend/src/styles/: global.css  theme.css
src/ils4gas/: env.py  google_adk_template.py  main.py  version.py
src/ils4gas/modules/: ils4gas.py
src/ils4gas/modules/util/: comm.py
tests/: test_skills.py
