[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ils4gas"
version = "0.1.0"
description = "ILS4GAS - AI Agent for Ionic Liquid Solubility of GAS"
requires-python = ">=3.10"
dependencies = [
    "ase",
    "fastapi>=0.115.0",
    "mcp>=1.9.0",
    "loguru>=0.7.0",
    "openai>=1.60.0",
    "rdkit",
    "textual>=0.80.0",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
ils4gas = "backend.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["static/**/*"]
